--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -15,13 +15,13 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
       - name: Cache dependencies
         uses: actions/cache@v3
         with:
           path: ~/.deno
-          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno.lock') }}
+          key: ${{ runner.os }}-deno-${{ hashFiles('**/deno.json') }}
 
       - name: Format check
         run: deno fmt --check
@@ -51,7 +51,7 @@ jobs:
       - name: Setup Deno
         uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v2.x
 
       - name: Deploy to Deno Deploy
         run: |
