--- a/.github/workflows/devsecops.yml
+++ b/.github/workflows/devsecops.yml
@@ -44,7 +44,7 @@ jobs:
   deploy:
     needs: security
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && secrets.DENO_DEPLOY_TOKEN != ''
+    if: github.ref == 'refs/heads/main'
     steps:
       - uses: actions/checkout@v3
 
